    new kinds of values:

      - standalone expressions that aren't
        otherwise mapped
      - column_property() objects
      - string names of any column_property()
        or attribute name of a mapped Column

    The docs include an example using 
    the case() construct, which is likely to be
    a common constructed used here.
    [ticket:2345] and part of [ticket:2238]

  - [feature] IdentitySet supports the - operator
    as the same as difference(), handy when dealing 
    with Session.dirty etc. [ticket:2301]

  - [feature] Added new value for Column autoincrement
    called "ignore_fk", can be used to force autoincrement
    on a column that's still part of a ForeignKeyConstraint.
    New example in the relationship docs illustrates
    its use.

  - [bug] Fixed bug in get_history() when referring
    to a composite attribute that has no value;
    added coverage for get_history() regarding 
    composites which is otherwise just a userland
    function.

- sql
   - [bug] related to [ticket:2316], made some 
     adjustments to the change from [ticket:2261]
     regarding the "from" list on a select(). The
     _froms collection is no longer memoized, as this
     simplifies various use cases and removes the 
     need for a "warning" if a column is attached
     to a table after it was already used in an 
     expression - the select() construct will now
     always produce the correct expression.
     There's probably no real-world
     performance hit here; select() objects are 
     almost always made ad-hoc, and systems that 
     wish to optimize the re-use of a select()
     would be using the "compiled_cache" feature.
     A hit which would occur when calling select.bind
     has been reduced, but the vast majority
     of users shouldn't be using "bound metadata"
     anyway :).

   - [feature] The update() construct can now accommodate
     multiple tables in the WHERE clause, which will